# cmake1

./: CMakeLists.txt  README.md  qt5.cmake
Core/: Core.cpp
UI/: UI.pro
include/: Core.h
